--- a/web/public/index.html
+++ b/web/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Bootstrap core CSS -->
+    <link href="https://bootsnipp.com/bootstrap-builder/css/editor.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="https://bootsnipp.com/bootstrap-builder/demo/narrow-jumbotron/narrow-jumbotron.css" rel="stylesheet">
+    <style type="text/css">.c1-ui-state-hover {background-color:yellow !important; padding:5px !important }</style>
     <title>React App</title>
   </head>
   <body>
